manifests/setup_rancher_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: rancher-ingress
  namespace: cattle-system
spec:
  rules:
    - host: k3s-master.gd
      http:
        paths:
          - backend:
              serviceName: rancher
              servicePort: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #   - hosts:
  #       - www.example.com
  #     secretName: example-tls
